TB 91.1.2: "Edit As New Message" => DSN request not set (default for new messages)
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(thunderbird_esr78 wontfix, thunderbird_esr91+ fixed, thunderbird94+ fixed)
People
(Reporter: electric.monk, Assigned: rnons)
References
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr91+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:91.0) Gecko/20100101 Firefox/91.0
Steps to reproduce:
TB 91.1.2: "Edit As New Message" on Message in "Sent" folder, to resend it to another person.
Actual results:
"DSN request" is not set, as seen in the menu, and in fact i get none.
Expected results:
I have set "DSN request always" for that account, and on all newly composed messages it is set and receives me (normally) as requested. Setting it manually in the menu of the compose window after "Edit As New Message" works perfectly. But - as said - shouldnt it be set automatically in "Edit As New Message" composition windows as in "normal" new message compoisiton windows?
Reporter | ||
Comment 1•3 years ago
|
||
(In reply to electric.monk@posteo.net from comment #0)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:91.0) Gecko/20100101 Firefox/91.0
Steps to reproduce:
TB 91.1.2: "Edit As New Message" on Message in "Sent" folder, to resend it to another person.
Actual results:
"DSN request" is not set, as seen in the menu, and in fact i get none.
Expected results:
I have set "DSN request always" for that account, and on all newly composed messages it is set and receives me (normally) as requested. Setting it manually in the menu of the compose window after "Edit As New Message" works perfectly. But - as said - shouldnt it be set automatically in "Edit As New Message" composition windows as in "normal" new message compoisiton windows?
Reporter | ||
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
Seems to me this bug exists in 78 as well. For others want to reproduce, set mail.dsn.always_request_on
to true first, then compose a new mail or edit as new, the Options --> Delivery Status Notification
menu item should be checked in both cases.
Reporter | ||
Comment 3•3 years ago
|
||
set
mail.dsn.always_request_on
to true first
Yes, exactly, thanks! That was also set by me a long time ago, so it is indeed even not an account specific setting (as i wrote).
Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/41d1ae8352e0
Use DSN setting of identity when editing as new. r=mkmelin
Assignee | ||
Comment 6•3 years ago
|
||
Comment on attachment 9244693 [details]
Bug 1734459 - Use DSN setting of identity when editing as new. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: With mail.dsn.always_request_on=true, "edit as new" doesn't request DSN
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low
Comment 7•3 years ago
|
||
Comment on attachment 9244693 [details]
Bug 1734459 - Use DSN setting of identity when editing as new. r=mkmelin
[Triage Comment]
Approved for beta
Comment 8•3 years ago
|
||
bugherder uplift |
Thunderbird 94.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/6986dcd6932a
Comment 9•3 years ago
|
||
Comment on attachment 9244693 [details]
Bug 1734459 - Use DSN setting of identity when editing as new. r=mkmelin
[Triage Comment]
Approved for ers91
Comment 10•3 years ago
|
||
bugherder uplift |
Thunderbird 91.2.1:
https://hg.mozilla.org/releases/comm-esr91/rev/9f42b9db62fe
Description
•