Bug 1734459 - Use DSN setting of identity when editing as new. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D127763

--HG--
extra : amend_source : c036647a30bc241a17862e694ecd2ba96302eccc