mailnews/compose/src/nsMsgCompose.cpp
@@ -880,8 +880,7 @@ nsMsgCompose::Initialize(nsIMsgComposeParams* aParams,
     // by checking the identity prefs - but don't clobber the values for
     // drafts and templates as they were set up already by mime when
     // initializing the message.
-    if (m_identity && draftId.IsEmpty() && type != nsIMsgCompType::Template &&
-        type != nsIMsgCompType::EditAsNew) {
+    if (m_identity && draftId.IsEmpty() && type != nsIMsgCompType::Template) {
       bool requestReturnReceipt = false;
       rv = m_identity->GetRequestReturnReceipt(&requestReturnReceipt);
       NS_ENSURE_SUCCESS(rv, rv);
